--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.DS_Store 
+.idea
+
 # Runtime data
 pids
 *.pid
@@ -58,5 +61,7 @@ typings/
 
 # dotenv environment variables file
 .env
+
+
 
 
