--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
+        "watch": true,
         "sourceMap": false,
         "noImplicitThis": true,
         "strictNullChecks": true,
