--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "typescript-example",
-    "version": "0.0.1",
-    "description": "TypeScript Mastering",
-    "main": "",
-    "author": "SeolHun",
-    "license": "ISC",
-    "dependencies": {},
-    "devDependencies": {
-        "lite-server": "^2.3.0"
-    },
-    "scripts": {
-        "test": "echo \"Error : no test specified\" && exit 1",
-        "start": "lite-server"
-    }
+  "name": "typescript-example",
+  "version": "0.0.1",
+  "description": "TypeScript Mastering",
+  "main": "main.ts",
+  "author": "SeolHun",
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {
+    "lite-server": "^2.3.0"
+  },
+  "scripts": {
+    "test": "echo \"Error : no test specified\" && exit 1",
+    "start": "lite-server"
+  }
 }
