--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "typescript-example",
-  "version": "0.0.1",
-  "description": "TypeScript Mastering",
-  "main": "main.ts",
   "author": "SeolHun",
-  "license": "ISC",
-  "dependencies": {},
+  "version": "1.0.0",
+  "description": "TypeScript Mastering Project",
+  "main": "src/main.js",
+  "license": "MIT",
+  "dependencies": {
+    "mithril": "^1.1.6"
+  },
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "jest": "^22.0.4",
+    "lite-server": "^2.3.0",
+    "webpack": "^3.10.0"
   },
   "scripts": {
-    "test": "echo \"Error : no test specified\" && exit 1",
-    "start": "lite-server"
+    "test": "jest",
+    "start": "lite-server",
+    "build": "webpack"
   }
 }
