To init npm repo for test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-example",
+  "name": "@seolhun/typescript-example",
   "author": "SeolHun",
   "version": "1.0.0",
   "description": "TypeScript Mastering Project",
