--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "mithril": "^1.1.6"
   },
   "devDependencies": {
+    "@seolhun/typescript-example": "^1.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "classnames": "^2.2.5",
     "jest": "^22.0.4",
     "lite-server": "^2.3.0",
     "webpack": "^3.10.0"
