--- a/package.json
+++ b/package.json
@@ -3,27 +3,87 @@
   "author": "SeolHun",
   "version": "1.0.0",
   "description": "TypeScript Mastering Project",
-  "main": "src/main.js",
+  "main": "main.js",
   "license": "MIT",
   "dependencies": {
     "mithril": "^1.1.6",
-    "jest": "^22.0.4"
+    "jest": "^22.0.4",
+    "lodash": "^4.17.4",
+    "classnames": "^2.2.5"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.0",
     "@seolhun/typescript-example": "^1.0.0",
+    "@types/jest": "^22.0.0",
+    "@types/lodash": "^4.14.91",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "classnames": "^2.2.5",
-    "lite-server": "^2.3.0",
-    "webpack": "^3.10.0"
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.3.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "autoprefixer": "^7.2.2",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chalk": "^2.3.0",
+    "eslint": "^4.13.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "http-proxy-middleware": "^0.17.4",
+    "img-loader": "^2.0.0",
+    "inject-loader": "^3.0.1",
+    "lolex": "^2.3.1",
+    "mocha": "^4.0.1",
+    "nightwatch": "^0.9.19",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.3.0",
+    "path": "^0.12.7",
+    "phantomjs-prebuilt": "^2.1.16",
+    "resolve-url-loader": "^2.2.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "selenium-server": "^3.8.1",
+    "semver": "^5.4.1",
+    "shelljs": "^0.7.8",
+    "sinon": "^4.1.3",
+    "style-loader": "^0.19.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.2",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-merge": "^4.1.0"
   },
   "scripts": {
-    "test": "jest",
-    "start": "lite-server",
-    "build": "webpack"
+    "build": "node build/build.js",
+    "dev": "node build/dev-server.js",
+    "test": "jest"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   },
   "directories": {
     "test": "test"
