--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,25 @@
 {
   "name": "@seolhun/typescript-example",
   "author": "SeolHun",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "TypeScript Mastering Project",
   "main": "main.js",
   "license": "MIT",
   "dependencies": {
-    "mithril": "^1.1.6",
+    "classnames": "^2.2.5",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.12.3",
     "jest": "^22.0.4",
     "lodash": "^4.17.4",
-    "classnames": "^2.2.5"
+    "mithril": "^1.1.6"
   },
   "devDependencies": {
-    "@seolhun/typescript-example": "^0.1.3",
+    "@seolhun/typescript-example": "^0.1.4",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
+    "@types/express": "^4.11.0",
+    "@types/express-graphql": "0.0.35",
+    "@types/graphql": "^0.11.7",
     "autoprefixer": "^7.2.2",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
