--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,27 @@
   "description": "Graphql example",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node src/main.js",
+    "json:server": "json-server --watch db.json",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.11.0",
-    "@types/express-graphql": "0.0.35",
-    "@types/graphql": "^0.11.7",
-    "@types/lodash": "^4.14.92",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
-    "lodash": "^4.17.4"
+    "jest": "^22.0.6",
+    "lodash": "^4.17.4",
+    "typescript": "^2.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.0",
+    "@types/express-graphql": "0.0.35",
+    "@types/graphql": "^0.11.7",
+    "@types/jest": "^22.0.1",
+    "@types/lodash": "^4.14.92",
+    "axios": "^0.17.1",
+    "json-server": "^0.12.1"
   }
 }
