--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,21 @@
   "author": "SeolHun",
   "version": "0.1.4",
   "description": "TypeScript Mastering Project",
-  "main": "main.js",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.5",
     "jest": "^22.0.6",
     "lodash": "^4.17.4",
-    "mithril": "^1.1.6"
+    "vue": "git+https://github.com/DanielRosenwasser/vue.git#540a38fb21adb7a7bc394c65e23e6cffb36cd867",
+    "vue-class-component": "^6.1.2",
+    "vue-property-decorator": "^6.0.0"
   },
   "devDependencies": {
     "@seolhun/typescript-example": "^0.1.4",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
-    "@types/mithril": "^1.1.12",
-    "autoprefixer": "^7.2.2",
+    "autoprefixer": "^7.2.5",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -53,7 +54,7 @@
     "mocha": "^4.0.1",
     "nightwatch": "^0.9.19",
     "node-sass": "^4.7.2",
-    "opn": "^5.1.0",
+    "opn": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "path": "^0.12.7",
@@ -64,15 +65,18 @@
     "selenium-server": "^3.8.1",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
-    "sinon": "^4.1.4",
+    "sinon": "^4.1.5",
     "style-loader": "^0.19.0",
+    "ts-loader": "^3.2.0",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.2",
     "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.10.1",
+    "webpack-dev-server": "^2.11.0",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.0"
   },
