Init TypeScript Example with Vue

--- a/client/package.json
+++ b/client/package.json
@@ -5,85 +5,87 @@
   "description": "TypeScript Mastering Project",
   "main": "index.ts",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon build/dev-server.js",
+    "build": "node build/build.js",
+    "test": "jest"
+  },
   "dependencies": {
     "classnames": "^2.2.5",
-    "jest": "^22.0.6",
+    "jest": "^22.1.2",
     "lodash": "^4.17.4",
+    "nodemon": "^1.14.11",
     "vue": "git+https://github.com/DanielRosenwasser/vue.git#540a38fb21adb7a7bc394c65e23e6cffb36cd867",
     "vue-class-component": "^6.1.2",
-    "vue-property-decorator": "^6.0.0"
+    "vue-property-decorator": "^6.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@seolhun/typescript-example": "^0.1.4",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
-    "autoprefixer": "^7.2.5",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
+    "@types/typescript": "^2.0.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.3.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.8",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.9",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.4",
-    "img-loader": "^2.0.0",
-    "inject-loader": "^3.0.1",
-    "lolex": "^2.3.1",
-    "mocha": "^4.0.1",
-    "nightwatch": "^0.9.19",
+    "jest-serializer-vue": "^0.3.0",
+    "nightwatch": "^0.9.12",
+    "node-notifier": "^5.2.1",
     "node-sass": "^4.7.2",
-    "opn": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.3.0",
-    "path": "^0.12.7",
-    "phantomjs-prebuilt": "^2.1.16",
-    "resolve-url-loader": "^2.2.0",
-    "rimraf": "^2.6.2",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
-    "selenium-server": "^3.8.1",
-    "semver": "^5.4.1",
-    "shelljs": "^0.7.8",
-    "sinon": "^4.1.5",
-    "style-loader": "^0.19.0",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.5.0",
+    "shelljs": "^0.7.6",
     "ts-loader": "^3.2.0",
-    "tslint": "^5.9.1",
     "typescript": "^2.6.2",
-    "url-loader": "^0.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.0",
-    "vue-template-compiler": "^2.5.13",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.2.1",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.11.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.0"
-  },
-  "scripts": {
-    "build": "node build/build.js",
-    "dev": "node build/dev-server.js",
-    "test": "jest"
   },
   "engines": {
     "node": ">= 4.0.0",
