--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,20 +1,14 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
+    "sourceMap": true,
     "strict": false,
     "noImplicitReturns": false,
-    "watch": true,
-    "sourceMap": false,
-    "noImplicitThis": false,
-    "strictNullChecks": false,
     "experimentalDecorators": true,
+    "module": "es2015",
     "moduleResolution": "node",
+    "target": "es5"
   },
   "include": [
     "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
