--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "watch": true,
-    "sourceMap": false,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
+    "sourceMap": true,
+    "strict": false,
+    "noImplicitReturns": false,
     "experimentalDecorators": true,
+    "module": "es2015",
+    "moduleResolution": "node",
+    "target": "es5"
   },
-  "exclude": [
-    "node_modules"
+  "include": [
+    "./src/**/*"
   ]
 }
