--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
     "@types/typescript": "^2.0.0",
+    "@types/vue": "^2.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
