--- a/client/.babelrc
+++ b/client/.babelrc
@@ -16,7 +16,8 @@
     "stage-2"
   ],
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    "transform-decorators-legacy",
   ],
   "env": {
     "test": {
