--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "jest": "^22.1.2",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
-    "vue": "git+https://github.com/DanielRosenwasser/vue.git#540a38fb21adb7a7bc394c65e23e6cffb36cd867",
+    "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
@@ -25,6 +25,7 @@
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
     "@types/typescript": "^2.0.0",
+    "@types/vue": "^2.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -33,6 +34,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
@@ -80,7 +82,7 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.2.1",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
