--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "graphql-example",
   "version": "1.0.0",
   "description": "Graphql example",
-  "main": "main.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/main.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
     "json:server": "json-server --watch db.json --port 3100",
     "test": "jest"
   },
@@ -14,7 +14,7 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
-    "jest": "^22.0.6",
+    "jest": "^22.1.2",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
     "typescript": "^2.6.2"
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.11.0",
     "@types/express-graphql": "0.0.35",
-    "@types/graphql": "^0.11.7",
+    "@types/graphql": "^0.11.8",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
     "axios": "^0.17.1",
