--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "module": "es6",
-    "moduleResolution": "node",
     "target": "es6",
-    "watch": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
     "sourceMap": false,
-    "removeComments": false,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules"
