--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
+    "target": "es6",
     "module": "commonjs",
-    "target": "es5",
-    "watch": true,
+    "moduleResolution": "node",
     "sourceMap": false,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules"
