--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,18 @@
   "description": "Graphql example",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "json:server": "json-server --watch db.json --port 3100",
     "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "seolhun",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
     "jest": "^22.1.2",
+    "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
     "typescript": "^2.6.2"
@@ -25,7 +26,6 @@
     "@types/graphql": "^0.11.8",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.92",
-    "axios": "^0.17.1",
-    "json-server": "^0.12.1"
+    "axios": "^0.17.1"
   }
 }
