--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "update": "cd client && npm update && cd ../server && npm update"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
