Updated Mutation of GraphQL (#21)
* Added TypeScript with vue 60%

* Is Added Simple graphql examples

* Init TypeScript Example with Vue

* Testing Vue

* Completed TpyeScript config, but need search information about config of vue typescript

* Setting

* All node run by TS

* GraphQL Query is divided by type

* Updated GraphQL Mutation

--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
     "update": "cd client && npm update && cd ../server && npm update"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
 }
