--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "@types/express": "^4.11.0",
