--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.1",
     "classnames": "^2.2.5",
     "jest": "^22.1.2",
     "lodash": "^4.17.4",
@@ -61,6 +63,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.5.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
