[AWS] - Is adding Dynamo client to store test data

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
-    "noImplicitAny": false
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
+    "baseUrl": "src"
   },
   "include": [
     "src/**/*.ts"
