--- a/client/.babelrc
+++ b/client/.babelrc
@@ -17,16 +17,13 @@
   ],
   "plugins": [
     "transform-runtime",
-    "transform-decorators-legacy",
+    "transform-decorators-legacy"
   ],
   "env": {
     "test": {
       "presets": [
         "env",
         "stage-2"
-      ],
-      "plugins": [
-        "istanbul"
       ]
     }
   }
