--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.0",
     "classnames": "^2.2.5",
     "jest": "^22.1.2",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
+    "ts-loader": "^3.3.1",
+    "typescript": "^2.6.2",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
@@ -26,24 +29,17 @@
     "@types/lodash": "^4.14.92",
     "@types/typescript": "^2.0.0",
     "@types/vue": "^2.0.0",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.9",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -61,8 +57,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.5.0",
     "shelljs": "^0.7.6",
-    "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2",
+    "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
