--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,23 +1,25 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "commonjs",
     "lib": [
-      "dom",
-      "es2015"
+      "es2016",
+      "dom"
     ],
-    "module": "es2015",
     "moduleResolution": "node",
-    "experimentalDecorators": true,
+    // "noImplicitAny": true,
+    // "strictNullChecks": true,
+    "declaration": true,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
+    "experimentalDecorators": true,
     "noUnusedParameters": false,
-    "jsx": "preserve",
-    "jsxFactory": "h"
+    "noUnusedLocals": false,
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
+    "src/**/*.ts"
   ],
-  "compileOnSave": false
+  "typeAcquisition": {
+    "enable": true
+  }
 }
