--- a/client/package.json
+++ b/client/package.json
@@ -11,22 +11,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link": "^1.0.7",
+    "apollo-link-http": "^1.3.2",
+    "axios": "^0.17.1",
     "bootstrap-vue": "^2.0.0-rc.0",
     "classnames": "^2.2.5",
-    "jest": "^22.1.2",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
+    "jest": "^22.1.4",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
     "ts-loader": "^3.3.1",
     "typescript": "^2.6.2",
     "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-alpha.3",
     "vue-class-component": "^6.1.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
-    "@types/lodash": "^4.14.92",
+    "@types/jest": "^22.1.0",
+    "@types/lodash": "^4.14.96",
     "@types/typescript": "^2.0.0",
     "@types/vue": "^2.0.0",
     "babel-core": "^6.26.0",
@@ -62,11 +70,11 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.0"
   },
