--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "seolhun",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
+    "express-session": "^1.15.6",
     "graphql": "^0.12.3",
-    "jest": "^22.1.2",
+    "jest": "^22.1.4",
     "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
@@ -25,9 +28,8 @@
     "@types/express": "^4.11.0",
     "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.8",
-    "@types/jest": "^22.0.1",
-    "@types/lodash": "^4.14.92",
-    "aws-sdk": "^2.185.0",
+    "@types/jest": "^22.1.0",
+    "@types/lodash": "^4.14.96",
     "axios": "^0.17.1"
   }
 }
