--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
+    "moduleResolution": "node",
     "lib": [
       "es2016",
       "dom"
     ],
-    "moduleResolution": "node",
+    // "strict": true,
+    "noImplicitThis": true,
     // "noImplicitAny": true,
     // "strictNullChecks": true,
     "declaration": true,
