--- a/client/package.json
+++ b/client/package.json
@@ -28,15 +28,18 @@
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-alpha.3",
     "vue-class-component": "^6.1.2",
+    "vue-i18n": "^7.4.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^22.1.0",
     "@types/lodash": "^4.14.96",
     "@types/typescript": "^2.0.0",
     "@types/vue": "^2.0.0",
+    "@types/vue-i18n": "^7.0.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^21.0.2",
