--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "json:server": "json-server --watch db.json --port 3100",
     "test": "jest"
   },
   "author": "seolhun",
@@ -17,6 +16,7 @@
     "express-graphql": "^0.6.11",
     "express-session": "^1.15.6",
     "graphql": "^0.12.3",
+    "helmet": "^3.11.0",
     "jest": "^22.1.4",
     "json-server": "^0.12.1",
     "lodash": "^4.17.4",
@@ -30,6 +30,7 @@
     "@types/express": "^4.11.0",
     "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.8",
+    "@types/helmet": "0.0.37",
     "@types/jest": "^22.1.0",
     "@types/lodash": "^4.14.96",
     "@types/sequelize": "^4.27.6",
