[Vue] Updated files and setting

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,13 +8,14 @@
       "dom"
     ],
     // "strict": true,
-    "noImplicitThis": true,
     // "noImplicitAny": true,
     // "strictNullChecks": true,
+    "noImplicitThis": true,
     "declaration": true,
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "noUnusedParameters": false,
     "noUnusedLocals": false,
   },
