--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,8 +16,8 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "noUnusedParameters": false,
-    "noUnusedLocals": false,
+    // "noUnusedParameters": true,
+    // "noUnusedLocals": true,
   },
   "include": [
     "src/**/*.ts"
