--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "seolhun",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
@@ -17,16 +18,14 @@
     "express-session": "^1.15.6",
     "graphql": "^0.12.3",
     "helmet": "^3.11.0",
-    "jest": "^22.1.4",
-    "json-server": "^0.12.1",
     "lodash": "^4.17.4",
     "mysql2": "^1.5.2",
     "nodemon": "^1.14.11",
-    "sequelize": "^4.33.4",
-    "typescript": "^2.6.2",
+    "axios": "^0.17.1",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.20",
     "@types/express": "^4.11.0",
     "@types/express-graphql": "0.0.35",
     "@types/graphql": "^0.11.8",
@@ -34,6 +33,8 @@
     "@types/jest": "^22.1.0",
     "@types/lodash": "^4.14.96",
     "@types/sequelize": "^4.27.6",
-    "axios": "^0.17.1"
+    "jest": "^22.1.4",
+    "sequelize": "^4.33.4",
+    "typescript": "^2.6.2"
   }
 }
