--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "seolhun",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -21,7 +22,8 @@
     "lodash": "^4.17.4",
     "mysql2": "^1.5.2",
     "nodemon": "^1.14.11",
-    "axios": "^0.17.1",
+    "passport": "^0.4.0",
+    "passport-github2": "^0.1.11",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
