[Vue] Updated SignIn UI

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.14.11",
     "ts-loader": "^3.3.1",
     "typescript": "^2.6.2",
+    "validator": "^9.4.1",
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-alpha.3",
     "vue-class-component": "^6.1.2",
@@ -38,6 +39,7 @@
     "@types/jest": "^22.2.0",
     "@types/lodash": "^4.14.104",
     "@types/typescript": "^2.0.0",
+    "@types/validator": "^9.4.0",
     "@types/vue": "^2.0.0",
     "@types/vue-i18n": "^7.0.0",
     "babel-core": "^6.26.0",
