--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,8 +16,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    // "noUnusedParameters": true,
-    // "noUnusedLocals": true,
+    "noUnusedParameters": true,
   },
   "include": [
     "src/**/*.ts"
