--- a/server/package.json
+++ b/server/package.json
@@ -33,12 +33,14 @@
     "express-session": "^1.15.6",
     "graphql": "^0.12.3",
     "helmet": "^3.12.0",
-    "lodash": "^4.17.5",
     "jest": "^22.4.2",
+    "lodash": "^4.17.5",
     "mysql2": "^1.5.2",
     "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
+    "sequelize": "^4.36.1",
+    "sinon": "^4.4.8",
     "winston": "^3.0.0-rc2"
   },
   "devDependencies": {
@@ -50,7 +52,7 @@
     "@types/jest": "^22.2.0",
     "@types/lodash": "^4.14.104",
     "@types/sequelize": "^4.27.10",
-    "sequelize": "^4.36.1",
+    "@types/sinon": "^4.3.0",
     "ts-jest": "^22.4.2",
     "typescript": "^2.7.2"
   }
