--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
@@ -41,7 +42,9 @@
     "mysql2": "^1.5.2",
     "nodemon": "^1.17.2",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.11",
+    "passport-google-oauth20": "^1.0.0",
     "sequelize": "^4.36.1",
     "sinon": "^4.4.8",
     "winston": "^3.0.0-rc2"
@@ -55,6 +58,7 @@
     "@types/helmet": "0.0.37",
     "@types/jest": "^22.2.0",
     "@types/lodash": "^4.14.104",
+    "@types/passport": "^0.4.3",
     "@types/sequelize": "^4.27.10",
     "@types/sinon": "^4.3.0",
     "ts-jest": "^22.4.2",
