--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,7 @@
   "main": "main.ts",
   "license": "MIT",
   "scripts": {
-    "all": "concurrently \"npm run client\" \"npm run server\"",
-    "server": "cd ../server && npm run dev",
-    "client": "nodemon build/dev-server.js",
+    "dev": "nodemon build/dev-server.js",
     "build": "node build/build.js",
     "test": "jest"
   },
@@ -26,7 +24,7 @@
     "lodash": "^4.17.4",
     "nodemon": "^1.14.11",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.3.4000",
+    "typescript": "^3.6.2",
     "validator": "^10.11.0",
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-alpha.3",
@@ -54,7 +52,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.3.2",
-    "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "eventsource-polyfill": "^0.9.6",
