--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,25 +3,20 @@
     "target": "es5",
     "module": "es6",
     "moduleResolution": "node",
-    "lib": [
-      "es5",
-      "es6",
-      "dom"
-    ],
+    "lib": ["es5", "es6", "dom"],
     // "strict": true,
     // "noImplicitAny": true,
     // "strictNullChecks": true,
+    "esModuleInterop": true,
     "noImplicitThis": true,
     "declaration": true,
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "typeAcquisition": {
     "enable": true
   }
