--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.DS_Store 
+.DS_Store
 .idea
 
 # Runtime data
@@ -62,6 +62,5 @@ typings/
 # dotenv environment variables file
 .env
 
-
-
-
+# dist
+dist
