--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "test": "jest"
   },
   "jest": {
@@ -25,7 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
@@ -48,7 +50,7 @@
     "winston": "^3.0.0-rc2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.20",
     "@types/express": "^4.11.1",
     "@types/express-graphql": "0.8.1",
