--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,7 @@
     "helmet": "^3.12.0",
     "jest": "^24.5.0",
     "lodash": "^4.17.5",
-    "mysql2": "^1.5.2",
+    "mariadb": "^2.1.0",
     "nodemon": "^1.17.2",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
