--- a/server/package.json
+++ b/server/package.json
@@ -59,6 +59,7 @@
     "@types/passport": "^1.0.0",
     "@types/sequelize": "^4.28.4",
     "@types/sinon": "^7.0.10",
+    "dotenv": "^8.1.0",
     "ts-jest": "^24.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
