--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       - MARIADB_PASSWORD=${DB_ROOT_PASSWORD}
       - MARIADB_DATABASE=${DB_DATABASE}
     env_file:
-      - ./.env
+      - .env
 
   server:
     build: ./
     env_file:
-      - ./.env
+      - .env
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
     depends_on:
