--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,13 @@
     "ts-loader": "^5.3.3",
     "typescript": "^3.6.2",
     "validator": "^10.11.0",
-    "vue": "^2.5.13",
-    "vue-apollo": "^3.0.0-alpha.3",
-    "vue-class-component": "^7.0.2",
-    "vue-i18n": "^8.10.0",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.10",
+    "vue-apollo": "^3.0.0-rc.2",
+    "vue-class-component": "^7.1.0",
+    "vue-i18n": "^8.14.0",
+    "vue-property-decorator": "^8.2.2",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -74,7 +74,7 @@
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "vue-jest": "^3.0.4",
-    "vue-loader": "^15.7.0",
+    "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.29.6",
