--- a/client/.env
+++ b/client/.env
@@ -3,6 +3,6 @@ CLIENT_PORT=8080
 SERVER_PORT=4000
 DB_PORT=3306
 DB_HOST=mariadb
-DB_USER=hunseol
-DB_ROOT_PASSWORD=hunseol
+DB_USER=test
+DB_ROOT_PASSWORD=test
 DB_DATABASE=shooney_management
