--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.5",
